2008-10-16  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-block.c (convert_property), (ccss_block_new_property),
	(ccss_block_get_property):
	* ccss/ccss-block.h:
	* ccss/ccss-parser.c (property_cb):
	* ccss/ccss-property.h:
	* ccss/ccss-style.c (ccss_style_dump):
	Generic properties (opaque to libccss), only types `double', 'identifier', and `string' supported for now.

2008-10-15  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-stylesheet.c (ccss_stylesheet_query_apply): include wildcard styles (report by Thomas Wood  <thomas@linux.intel.com>).

2008-10-15  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-background-parser.c (bg_attachment_parse),
	(bg_repeat_parse):
	* ccss/ccss-position.c (ccss_position_parse):
	* ccss/ccss-selector-group.c (traverse_apply):
	Consistent use of case sensitivity, only colors are case-insensitive.

2008-10-15  Robert Staudinger  <robsta@gnome.org>

	* ccss/Makefile.am:
	* ccss/ccss-gtk-style.c:
	* ccss/ccss-selector-group.h:
	* ccss/ccss-style-priv.h:
	* ccss/ccss-style.c:
	* ccss/ccss-style.h:
	* ccss/ccss.h:
	* configure.in:
	Cut down number of installed headers after change of internal representation.

2008-10-14  Robert Staudinger  <robsta@gnome.org>

	* ccss/Makefile.am:
	* ccss/ccss-border-parser.c (ccss_border_lookup_name):
	* ccss/ccss-border-parser.h:
	* ccss/ccss-style.c (convert_background_position),
	(convert_background_size), (convert_border_style):
	* configure.in:
	Fix `make distcheck'.

2008-10-14  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-parser.c (ccss_parser_parse_buffer): also use libcroco workaround.

2008-10-14  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-property.h:
	* ccss/ccss-selector.c (ccss_selector_append_child),
	(ccss_selector_append_descendant):
	Revisit TODOs for staleness.

2008-10-14  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-background-parser.c (ccss_block_parse_background):
	* ccss/ccss-background.c:
	* ccss/ccss-block.c (ccss_block_dump):